Change the code for U+20063 and U+3776

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -26844,7 +26844,6 @@ encoder:
 𦋋	wlhuu
 䍕	wlhum
 䍕	wlhui
-㝶	wlhui
 𦌇	wlhoo
 𦋯	wlhoo
 𦌫	wlhon
@@ -27346,6 +27345,7 @@ encoder:
 𡮨	wcf
 𠞅	wceln
 𤰯	wce
+㝶	wcdi
 䚑	wcbuu
 𡇡	wcbu
 𡆦	wc
@@ -54508,7 +54508,6 @@ encoder:
 𤗱	lsaib
 阊	lsaa
 𠁦	ls
-𠁣	ls
 𠁡	ls
 𧚖	lryo
 𧟓	lrrk
@@ -81741,6 +81740,7 @@ encoder:
 𪰔	albk
 𨳈	alal
 𣌦	al
+𠁣	al
 𪒞	akwff
 𦀤	akvf
 𪰘	aksr
