Reduce dict size, applying relative order rather rather than absolute order

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -13407,6 +13407,7 @@ encoder:
 泦	eskn	1
 𣳣	eskn
 涒	eskr
+澀	eskx
 𠨏	esl
 𤃎	eslg
 洍	esll		es'll
@@ -63771,6 +63772,7 @@ encoder:
 𡱉	sksk
 𩯢	skthu	1
 𩠷	skthu
+歰	skxx
 卩	sl	1
 𠁨	sl
 臂	slb	2
@@ -64897,6 +64899,7 @@ encoder:
 𦥵	sxnr
 㔱	sxo
 歰	sxshx
+歰	sxskx
 𡰵	sye
 匟	syhn		s'yhn
 𠑻	syhu
