--- a/cangjie6.extended.dict.yaml
+++ b/cangjie6.extended.dict.yaml
@@ -2429,6 +2429,7 @@ encoder:
 門後
 剔得
 門徑
+門衞	2
 門衛	1
 門徒	1
 門生
@@ -6398,7 +6399,9 @@ encoder:
 膠州灣
 彩筆
 睇風水
+同步衞星	1
 同步衛星
+貼身衞隊	5
 貼身衛隊	4
 彩印	1
 膠印
@@ -8383,6 +8386,7 @@ encoder:
 周徑
 同行	2
 周行	1
+周衞	1
 周衛
 周街
 同德
@@ -11119,6 +11123,7 @@ encoder:
 錦迴文	1
 錦旗
 金腿	1
+錦衣衞	1
 錦衣衛
 鍋裏
 公佈於衆
@@ -11199,6 +11204,7 @@ encoder:
 金鋒
 公共租界
 公共行政
+公共衞生	1
 公共衛生
 公共利益
 鑽得
@@ -13279,7 +13285,7 @@ encoder:
 卻步
 爺兒倆
 爺兒們
-鎅親
+鎅殄
 分辨率爲
 卻連
 分析處理
@@ -15272,6 +15278,7 @@ encoder:
 麴黴
 林州市
 林州
+李衞公	2
 李衛公	1
 李德
 李德林
@@ -15947,10 +15954,12 @@ encoder:
 標竿
 禁制令	1
 焚風
+禁衞軍	1
 禁衛軍
 杯後
 標得
 標籤
+禁衞	1
 禁衛
 標簽
 禁律
@@ -18907,6 +18916,7 @@ encoder:
 相距千里
 木匠
 東方航空
+東方衞視	1
 東方衛視
 櫃房
 木耳	1
@@ -20112,7 +20122,7 @@ encoder:
 整過
 禁止通行
 整週
-整親
+整殄
 整餐
 整邊
 整衣
@@ -20826,6 +20836,7 @@ encoder:
 漏風
 江湖術士
 江湖術語
+湖南衞視	3
 湖南衛視	2
 滿街跑	1
 滑行道
@@ -22375,7 +22386,7 @@ encoder:
 漫漶
 漆油
 沒油
-渡江	2
+渡江	1
 波源
 浸溼	1
 波江座
@@ -22892,7 +22903,7 @@ encoder:
 沒亮
 沒交	1
 沒效
-淥親
+淥殄
 沒親
 漫遊費
 波速
@@ -23095,6 +23106,7 @@ encoder:
 清潔生產
 塗炭生靈
 涼風
+清潔衞生	1
 清潔衛生
 漂往	3
 燙得	2
@@ -23444,6 +23456,7 @@ encoder:
 溼溫
 灌注
 淮海路
+汪精衞	1
 汪精衛
 塗粉
 塗料
@@ -24535,6 +24548,7 @@ encoder:
 海軍基地
 泡沫塑料
 水輪機
+海岸警衞隊	1
 海岸警衛隊
 洗耳恭聽
 汛期
@@ -24867,7 +24881,7 @@ encoder:
 決雌雄
 漫天遍地
 漫天遍野
-激親
+激殄
 溪壑
 激進黨
 沙文主義
@@ -27818,7 +27832,7 @@ encoder:
 港人	1
 港內	1
 淘氣鬼
-淥親隻手
+淥殄隻手
 沈佺期
 沉住氣
 沈丘	2
@@ -27832,7 +27846,7 @@ encoder:
 洗心
 沉甸甸
 洗手
-淥親手指
+淥殄手指
 洗手間
 沈春華
 港都
@@ -29673,6 +29687,7 @@ encoder:
 常州
 精製
 尚待
+精衞	1
 精衛
 常德
 常德市
@@ -29928,7 +29943,7 @@ encoder:
 精通於
 精選集	1
 精讀課
-焫親
+焫殄
 常設性
 常熟市
 精选
@@ -30566,6 +30581,8 @@ encoder:
 煤炭行業
 黨風	2
 炎風	1
+黨衞軍	1
+黨衛軍
 黨徒
 黨籍
 燈火管制
@@ -31129,6 +31146,7 @@ encoder:
 少陽
 少陪
 小行星	1
+火衞一	1
 火衛一
 少了
 火箭隊	1
@@ -32033,12 +32051,14 @@ encoder:
 小魚兒
 劏光豬
 小丑	1
+精衞填海	1
 精衛填海
 削坺坺
 小丑魚
 削去
 小陽春
 削笪笪
+省衞生廳	1
 省衛生廳
 削梨
 弊多利少
@@ -32259,7 +32279,7 @@ encoder:
 小敏
 小個
 小企業
-焮親
+焮殄
 小住
 小衆文化
 削足適履
@@ -33135,7 +33155,7 @@ encoder:
 勞動過程
 精力過剩
 精力過人
-焗親
+焗殄
 煙霧迷漫
 勞方
 烤熟
@@ -33776,7 +33796,7 @@ encoder:
 光通量
 光亮
 省親
-燒親
+燒殄
 光速
 燈光設備
 省主席
@@ -35971,6 +35991,7 @@ encoder:
 場面上
 場面話
 場面
+土衞六	1
 土衛六
 場子
 彭陽縣
@@ -35978,6 +35999,7 @@ encoder:
 場外
 彭陽
 場院
+土衞二	1
 土衛二
 土風舞
 土製	1
@@ -38559,7 +38581,9 @@ encoder:
 赫赫
 赤黴素
 超額利潤
+赤衞軍	1
 赤衛軍
+赤衞隊	1
 赤衛隊
 赫德
 赤身
@@ -39542,6 +39566,7 @@ encoder:
 歸真	1
 向南
 向南走
+衞滿朝鮮	4
 衛滿朝鮮	3
 向南看
 肩窩
@@ -40822,6 +40847,7 @@ encoder:
 的泛
 後後
 彼得	1
+後衞	3
 後衛	2
 後行	1
 後印
@@ -41204,7 +41230,7 @@ encoder:
 復新
 復讀生
 殷商
-犦親
+犦殄
 後遺症
 重複課稅	7
 後就
@@ -41711,6 +41737,7 @@ encoder:
 利潤分配
 重金屬	1
 稀土金屬
+衞理公會	1
 衛理公會
 衍聖公府
 管理公司
@@ -41834,6 +41861,7 @@ encoder:
 皇后
 特種行業
 管理制度
+生理衞生	1
 生理衛生
 重製
 往後	1
@@ -43224,6 +43252,7 @@ encoder:
 私生活
 私生女
 等第
+特衞強	1
 特衛強
 特制訂
 特制定
@@ -43566,6 +43595,7 @@ encoder:
 私隱權
 自我解嘲
 我敢
+自我防衞	1
 自我防衛
 特急	1
 自我陶醉
@@ -43577,6 +43607,7 @@ encoder:
 得人	2
 我人	1
 射入
+得人憎	1
 得人怕
 利令智昏
 我會去
@@ -43768,7 +43799,7 @@ encoder:
 特別長	1
 我喺
 鬼吹燈
-我跌親
+我跌殄
 風雲叱吒
 得啫
 我唔明
@@ -43796,7 +43827,7 @@ encoder:
 得噶啦
 等距
 我跟
-我嚇親
+我嚇殄
 符驗
 我聽
 篾匠
@@ -43997,6 +44028,7 @@ encoder:
 秉公辦理
 籌辦	1
 私辦
+衞戍部隊	1
 衛戍部隊
 特遣
 得上	3
@@ -45431,6 +45463,7 @@ encoder:
 生爲
 租用
 節約用水
+衞生用紙	1
 衛生用紙
 節約用電
 生膠
@@ -45452,12 +45485,15 @@ encoder:
 垂楊
 生根
 第一桶金
+衞生棉條	1
 衛生棉條
 生相
+衞生標準	1
 衛生標準
 生皮
 垂柳	1
 垂楊柳
+衞生機關	1
 衛生機關
 生查子
 生橡膠
@@ -45549,6 +45585,7 @@ encoder:
 租稅
 告一段落
 等一系列
+衞生系統	2
 衛生系統	1
 生殖系統
 生番
@@ -45584,6 +45621,7 @@ encoder:
 犧牲生命	1
 生風	1
 航空航天
+航空自衞隊	1
 航空自衛隊
 生利息
 生得
@@ -45646,6 +45684,7 @@ encoder:
 航空事業
 我一定會
 第二十七	1
+衞生官員	1
 衛生官員
 徑賽
 垂直角
@@ -45704,6 +45743,7 @@ encoder:
 生願
 風輕雲淡
 垂到
+衞星雲圖	1
 衛星雲圖
 千鈞一髮
 生吞
@@ -45734,6 +45774,7 @@ encoder:
 生產要素
 程控電話
 第一要務	1
+衞星電視	1
 衛星電視
 生面	1
 垂面
@@ -45757,6 +45798,7 @@ encoder:
 籤子	1
 租子
 私生子女
+衞星發射	1
 衛星發射
 從輕發落
 生鮮
@@ -45770,8 +45812,11 @@ encoder:
 生孩子
 第一象限
 徹底解決
+衞生防疫	2
 衛生防疫	1
+衞生防護	1
 衛生防護
+衞生陶瓷	1
 衛生陶瓷
 生疏	1
 生蛋
@@ -45789,6 +45834,7 @@ encoder:
 生俘
 生肉
 稽查人員
+衞生保健	2
 衛生保健	1
 生產條件
 鬼蜮伎倆
@@ -45903,6 +45949,7 @@ encoder:
 租屋
 生長
 的士司機
+衞生監督	1
 衛生監督
 生長期
 生長板
@@ -45958,6 +46005,7 @@ encoder:
 租給
 簽約獎金	2
 第三狀態
+衞生組織	1
 衛生組織
 行星狀星雲
 生產經營
@@ -45982,6 +46030,7 @@ encoder:
 租界
 生性固執
 血性男兒
+衞星圖像	1
 衛星圖像
 生母
 航空母艦
@@ -45995,11 +46044,13 @@ encoder:
 生育率	1
 穩產高產
 生產過剩
+衞星通信	1
 衛星通信
 生效
-笪親
+笪殄
 第二課堂
 生產設備	1
+衞生設備	1
 衛生設備
 生產設施
 程式設計
@@ -46008,6 +46059,7 @@ encoder:
 積極主動
 生造
 生育
+衞星導航	1
 衛星導航
 筠連縣
 筠連	1
@@ -46023,6 +46075,7 @@ encoder:
 第一部分	2
 第二部分	1
 第三部分
+衞生部門	1
 衛生部門
 生產者
 生產費
@@ -46077,6 +46130,7 @@ encoder:
 移時
 劉曉
 劉易斯
+衞星	4
 衛星	3
 行星	2
 劉星
@@ -46086,11 +46140,15 @@ encoder:
 衡量	4
 風量	2
 衝量	1
+衞星鐘	1
 衛星鐘
 凡是	1
 利是
+衞星城	1
 衛星城
+衞星圖	2
 衛星圖	1
+衞星國	1
 衛星國
 衙門	3
 風門	2
@@ -46107,6 +46165,7 @@ encoder:
 利是封
 劉昫
 行照
+衞冕	1
 衛冕
 風暴
 特別關注
@@ -46231,12 +46290,15 @@ encoder:
 風機	2
 街機
 移植性
+衞東	3
 衛東	2
 衡東	1
 行東
 衡東縣
+衞東區	1
 衛東區
 很多東西
+衞校	1
 衛校
 風水	4
 衡水	3
@@ -46249,7 +46311,9 @@ encoder:
 行淫
 航測
 風洞
+衞浴	1
 衛浴
+衞濱區	1
 衛濱區
 風波	4
 劉波	2
@@ -46269,6 +46333,7 @@ encoder:
 衝浪	1
 風浪
 風潮
+衞濱	1
 衛濱
 自行決定
 劉淵
@@ -46314,6 +46379,7 @@ encoder:
 劉少奇
 行省
 千瓦小時
+衞輝市	1
 衛輝市
 箭尖
 制幣
@@ -46327,6 +46393,7 @@ encoder:
 劉燁
 自行火炮
 劉光第
+衞輝	1
 衛輝
 風風光光
 風火牆
@@ -46345,6 +46412,7 @@ encoder:
 移去	1
 行幫
 鳳城	5
+衞城	5
 衛城	4
 風城	3
 行劫
@@ -46352,6 +46420,7 @@ encoder:
 衝垮	1
 衝勢	1
 行幸
+衞報	1
 衛報
 劉坤一
 風趣
@@ -46442,32 +46511,54 @@ encoder:
 行筆
 特別節目
 風笛
+衞生間	2
 衛生間	1
+衞生署	1
 衛生署
+衞生巾	3
 衛生巾	2
+衞生棉	2
 衛生棉	1
+衞生帶	1
 衛生帶
+衞生員	1
 衛生員
+衞生學	1
 衛生學
+衞生球	1
 衛生球
+衞生系	1
 衛生系
 衍生物
+衞生科	2
 衛生科	1
+衞生褲	1
 衛生褲
+衞生部	2
 衛生部	1
+衞生所	1
 衛生所
+衞生處	1
 衛生處
+衞生隊	1
 衛生隊
+衞生紙	2
 衛生紙	1
+衞生廳	1
 衛生廳
 衍生品	5
+衞生站	5
 衛生站	4
 風后	3
 衍生詞	2
+衞生司	2
 衛生司	1
+衞生局	1
 衛生局
+衞生院	2
 衛生院	1
 衍生出
+衞生衣	1
 衛生衣
 几几	1
 鳳凰網
@@ -46489,6 +46580,7 @@ encoder:
 風颳
 鳳凰城	1
 航行燈
+鳳凰衞視	4
 鳳凰衛視	3
 鳳凰號	2
 鳳凰山	2
@@ -46514,6 +46606,7 @@ encoder:
 躬行	2
 街衢
 行街
+衞從	1
 衛從
 劉德
 劉德華	1
@@ -46521,6 +46614,7 @@ encoder:
 利息稅
 風物
 衝我
+衞生	3
 衛生	2
 衍生	1
 移師
@@ -46547,6 +46641,7 @@ encoder:
 我們自己	2
 衝自己	1
 向前看齊
+衞留成	1
 衛留成
 剩翻
 航船	1
@@ -46562,11 +46657,14 @@ encoder:
 鳳求凰
 制度化
 靠窗座位
+衞戍	1
 衛戍
+衞戌	2
 衛戌	1
 剁成	2
 風成	1
 移成
+衞戍區	1
 衛戍區
 行庫
 凡庸
@@ -46629,6 +46727,7 @@ encoder:
 行事	1
 利事
 術士	1
+衞士	1
 衛士
 航空網
 航空兵
@@ -46759,10 +46858,12 @@ encoder:
 行禮	1
 衝不開
 制禮
+衞視	2
 衛視	1
 衝不出
 船到碼頭
 航班	1
+衞理	1
 衛理
 劉玉	5
 利雅得	4
@@ -46838,6 +46939,7 @@ encoder:
 銜頭
 刮頭
 劉雪華
+衞所	1
 衛所
 風扇	1
 行刑
@@ -46904,6 +47006,7 @@ encoder:
 筑陽
 風障
 風險	1
+衞隊	1
 衛隊
 移防
 制限
@@ -46950,6 +47053,7 @@ encoder:
 看風使舵
 很多人都
 箭竹
+衞兵	1
 衛兵
 利便
 行伍
@@ -47034,11 +47138,13 @@ encoder:
 箭毒蛙
 劉邦	1
 筑邦
+衞青	2
 衛青	1
 箭毒
 衝打
 劉表
 行孝
+衞教	1
 衛教
 和風拂面
 凡夫
@@ -47246,6 +47352,7 @@ encoder:
 航點
 風圈
 行略
+衞國	2
 衛國	1
 利國
 風團
@@ -47315,6 +47422,7 @@ encoder:
 行文	3
 劉文	2
 衍文	1
+衞奕信	1
 衛奕信
 劉斌	1
 劉文正
@@ -47347,6 +47455,7 @@ encoder:
 凡高	3
 風調	2
 移調	1
+衞護	1
 衛護
 利誘
 風評	1
@@ -47372,11 +47481,13 @@ encoder:
 航道	4
 行道	3
 風道	2
+衞道	2
 衛道	1
 衢道
 制導	1
 行道樹
 街道上	1
+衞道士	1
 衛道士
 劉玄	1
 行衰運
@@ -48084,6 +48195,7 @@ encoder:
 懲戒
 穩度
 德慶
+衞氏朝鮮	1
 衛氏朝鮮
 乖寶寶
 乘空
@@ -49525,6 +49637,7 @@ encoder:
 印加帝國
 和親
 千古遺恨
+衞浴設備	1
 衛浴設備
 生活設施
 各餐
@@ -50958,6 +51071,7 @@ encoder:
 微風	6
 自行車	1
 毛利率
+自衞隊	2
 自衛隊	1
 行出行入
 利己利人
@@ -50982,6 +51096,7 @@ encoder:
 自行	5
 先行	4
 爬行	3
+自衞	3
 自衛	2
 微行	1
 自從	4
@@ -51073,6 +51188,7 @@ encoder:
 看座	1
 後起之秀
 秋毫之末
+衞道之士	1
 衛道之士
 自應	1
 先應
@@ -52495,6 +52611,7 @@ encoder:
 番人	1
 留飲
 留餘地
+衞國保家	1
 衛國保家
 白面無鬚
 留低
@@ -53092,6 +53209,7 @@ encoder:
 庫爾德斯坦
 感情生活
 威脅利誘
+應用衞星	1
 應用衛星
 庫爾德人
 腐生
@@ -54342,7 +54460,9 @@ encoder:
 魔術貼
 府後
 魔術	2
+廚衞	2
 廚衛	1
+戍衞	1
 戍衛
 麝牛	1
 廕生
@@ -54528,6 +54648,7 @@ encoder:
 救得	1
 敷得
 敷衍	2
+廠衞	2
 廠衛	1
 戎行
 救我
@@ -54839,7 +54960,7 @@ encoder:
 救命恩人
 郎舅
 冷讀術
-冷親
+冷殄
 冷餐
 冷處理
 冷語	2
@@ -56700,6 +56821,7 @@ encoder:
 良港
 威海市
 凄涼
+威海衞	1
 威海衛
 庵堂
 盛衰榮辱
@@ -56894,7 +57016,7 @@ encoder:
 凍兒
 凍過
 戈蘭高地
-凍親
+凍殄
 畚斗
 憑欄遠眺
 救濟貧民	9
@@ -57004,6 +57126,7 @@ encoder:
 宿州
 暫得
 暫行	1
+宿衞	1
 宿衛
 暫升
 暫息
@@ -59497,6 +59620,7 @@ encoder:
 安全生產
 家庭生活
 家庭制度
+安全衞士	2
 安全衛士	1
 塞維利亞
 安全管理
@@ -59583,6 +59707,7 @@ encoder:
 室內賽
 室內樂
 安全保障
+安全保衞	1
 安全保衛
 安全保密
 安全氣囊
@@ -60039,7 +60164,9 @@ encoder:
 博動
 守禦
 轉租給
+安特衞普	2
 安特衛普	1
+守衞者	1
 守衛者
 專利藥
 宗法制度
@@ -60056,6 +60183,7 @@ encoder:
 守得	2
 寬待	1
 寬得
+守衞	2
 守衛	1
 轉行
 轉徙
@@ -68566,6 +68694,7 @@ encoder:
 大風雨
 疹子	1
 大風後
+大衞王	1
 大衛王
 大風	1
 大凡
@@ -68577,6 +68706,7 @@ encoder:
 有才無命
 大得	1
 大街	3
+大衞	3
 大衛	2
 大行	1
 有奶便是娘
@@ -69874,6 +70004,7 @@ encoder:
 左首
 大禮拜
 大刑
+左前衞	1
 左前衛
 左前方
 大禮包
@@ -70923,6 +71054,7 @@ encoder:
 狗秀
 右移
 加稅
+右後衞	1
 右後衛
 右後方
 加等
@@ -71255,6 +71387,7 @@ encoder:
 布加勒斯特
 加菲
 左右前後
+右前衞	1
 右前衛
 右前方
 大嘆
@@ -72276,7 +72409,7 @@ encoder:
 症狀
 大鼠
 大舅
-冇整親呀
+冇整殄呀
 大音階
 大週摺
 大帝	2
@@ -73663,7 +73796,7 @@ encoder:
 版刻
 中海油
 被裏
-中小	4
+中小	3
 北京日報
 數碼照片
 北京時間
@@ -73900,6 +74033,7 @@ encoder:
 中後期
 初潮
 初演
+中後衞	1
 中後衛
 中盤
 暢流
@@ -73970,6 +74104,7 @@ encoder:
 初露
 初雪
 初步階段
+中衞市	2
 中衛市	1
 中風後	1
 複分解反應
@@ -73986,6 +74121,7 @@ encoder:
 中徑
 暢敘
 中行	1
+中衞	1
 中衛
 中德
 初年
@@ -76205,6 +76341,7 @@ encoder:
 蚶子	1
 盅子
 盡了	2
+中前衞	2
 中前衛	1
 盡人
 盡人情
@@ -78972,6 +79109,7 @@ encoder:
 資生堂
 現實生活	1
 賈后
+雅典衞城	1
 雅典衛城
 不負衆望
 礦物	1
@@ -79758,6 +79896,7 @@ encoder:
 反問句
 夏日裏
 一滑
+反骨
 反骨仔
 球體
 福祿貝爾
@@ -82508,6 +82647,7 @@ encoder:
 王家瑞
 不確定性	1
 確定性
+王家衞	1
 王家衛
 確定是
 確定能	1
@@ -87029,6 +87169,7 @@ encoder:
 三款
 一班人
 三堆
+醒起	1
 五起
 二志
 三地
@@ -91234,6 +91375,7 @@ encoder:
 可壓
 吞吞
 不知所措
+不知所謂
 露雨
 不知所云
 一如所料
@@ -92953,6 +93095,7 @@ encoder:
 殘山剩水
 配第
 現行法
+環境衞生	1
 環境衛生
 視覺衝擊
 電視系列片
@@ -93850,6 +93993,7 @@ encoder:
 要得	1
 碾得
 要徑
+環衞	4
 環衛	3
 要衝	2
 環行	1
@@ -94535,7 +94679,7 @@ encoder:
 三衰六旺
 要交
 霎戇
-電親
+電殄
 示威遊行
 不堪設想
 要就
@@ -95114,6 +95258,7 @@ encoder:
 福建人
 福建省
 副國務卿
+正當防衞	1
 正當防衛
 一夥兒
 瑙魯
@@ -95573,6 +95718,7 @@ encoder:
 正得
 武術	2
 武行	1
+武衞	1
 武衛
 正從
 正德	1
@@ -98857,6 +99003,7 @@ encoder:
 附則
 蛋雞
 名義賬戶
+陰公
 兔爸
 阿特金斯
 附錄
@@ -99676,7 +99823,7 @@ encoder:
 敢過	1
 敢過去	1
 敢過來	2
-鯁親
+鯁殄
 外交途徑
 敢達
 隋文帝楊堅
@@ -100238,6 +100385,7 @@ encoder:
 多殺
 多在	1
 多病
+防衞大臣	1
 防衛大臣
 多套
 多加
@@ -100313,6 +100461,7 @@ encoder:
 多醣
 多面
 多面體
+防衞武器	1
 防衛武器
 多下
 多下來
@@ -100506,6 +100655,7 @@ encoder:
 強行通過
 多運
 引吭高歌
+防衞過當	1
 防衛過當
 多過頭
 多交
@@ -102350,12 +102500,16 @@ encoder:
 防風林
 防風	1
 防制法
+防衞部	1
 防衛部
+防衞性	1
 防衛性
+防衞廳	1
 防衛廳
 防颱
 勇往
 防得
+防衞	1
 防衛
 防制
 外匯管制
@@ -103096,6 +103250,7 @@ encoder:
 限制性	1
 限制式
 限制是
+張衞健	1
 張衛健
 限制器	1
 限制詞
@@ -106176,12 +106331,16 @@ encoder:
 集郵冊
 人地生疏
 條几
+保衞者	1
 保衛者
 你咪行住
+保衞戰	2
 保衛戰	1
 餘風
+保衞組	1
 保衛組
 氣得
+保衞	1
 保衛
 保德
 他的心
@@ -107156,6 +107315,7 @@ encoder:
 假得	1
 傻瓜蛋
 雙行	1
+雙衞	1
 雙衛
 優生	1
 雙生
@@ -109588,13 +109748,16 @@ encoder:
 領導制度	1
 依法行政
 依法行事
+侍衞官	1
 侍衛官
 俄製	1
+侍衞長	1
 侍衛長
 餓得	3
 傳得	2
 付得
 侍御
+侍衞	5
 侍衛	4
 俯衝	2
 餞行	1
@@ -109957,7 +110120,7 @@ encoder:
 傳過來
 係我講嘅
 付交
-餓親
+餓殄
 令親
 全套設備
 令叔	1
@@ -112045,6 +112208,7 @@ encoder:
 竹籤
 例行	4
 劍術	3
+創衞	3
 創衛	2
 倒行	1
 側衝
@@ -112057,6 +112221,7 @@ encoder:
 偷看
 停靠	1
 人事管理
+保衞和平	1
 保衛和平
 側身	1
 劍身
@@ -112236,6 +112401,7 @@ encoder:
 敘利亞人
 乞巧	1
 偷巧
+保衞祖國	1
 保衛祖國
 佇列
 創刊詞	1
@@ -112250,6 +112416,7 @@ encoder:
 倒頭	2
 佛頭	1
 劍頭
+保衞工作	2
 保衛工作	1
 例行工作
 倒打一耙
@@ -112606,6 +112773,7 @@ encoder:
 佛國
 倒置	1
 停置
+保衞國家	1
 保衛國家
 倒回	1
 偷回
@@ -112848,9 +113016,12 @@ encoder:
 僕僕風塵
 使徒行傳
 貸款利率
+個人衞生	2
 個人衛生	1
+氣象衞星	1
 氣象衛星
 個人利益
+保家衞國	1
 保家衛國
 僕役
 年久失修
@@ -114473,8 +114644,10 @@ encoder:
 信風帶
 舍利子
 信風
+食品衞生	3
 食品衛生	2
 保加利亞	1
+人造衞星	1
 人造衛星
 舍利弗	1
 舍利佛
@@ -114640,7 +114813,7 @@ encoder:
 含悲
 合一	1
 佔一
-何而來	2
+何而來
 食言而肥
 合資案
 佔資源
@@ -116495,6 +116668,7 @@ encoder:
 食唔飽
 食唔嗮
 傳輸距離
+衾兄弟
 食嘢
 飲食習慣
 餵驢	7
@@ -117006,7 +117180,7 @@ encoder:
 人還	1
 每過
 每週
-仆親
+仆殄
 每逢
 每邊
 飢寒交迫
@@ -118098,6 +118272,7 @@ encoder:
 怪笑
 怪物似
 怪笑聲
+心理衞生	1
 心理衛生
 雛鳳
 懂得	1
@@ -119355,6 +119530,7 @@ encoder:
 悽風苦雨
 刨出來
 恰到好處
+世衞組織	1
 世衛組織
 刨牀
 乜因由
@@ -119904,6 +120080,7 @@ encoder:
 性關節炎
 世風
 世行	1
+世衞	1
 世衛
 世德
 恆溫動物
@@ -121121,6 +121298,7 @@ encoder:
 教育制度
 捕風
 教育行政
+打掃衞生	1
 打掃衛生
 捕役
 搞得
@@ -121567,6 +121745,7 @@ encoder:
 擯斥
 投資風險
 損失率
+拱衞	1
 拱衛
 擴印
 損失
@@ -122604,6 +122783,7 @@ encoder:
 技巧
 投資
 投石
+搬磚	1
 投石機
 搜歌
 披頭
@@ -124318,12 +124498,14 @@ encoder:
 毒爪
 揮筆
 揮斥
+捍衞者	1
 捍衛者
 托運行李
 規章制度
 攝製
 掉得	1
 抹得
+捍衞	2
 捍衛	1
 攝行
 攝氏度
@@ -126524,6 +126706,7 @@ encoder:
 打噎
 打呼
 打鳴
+捍衞戰士	1
 捍衛戰士
 手彈
 抗戰	1
@@ -127335,7 +127518,7 @@ encoder:
 提交
 挑選到
 提親	2
-扻親	1
+扻殄	1
 挑選出
 提速
 捉迷藏
@@ -128883,7 +129066,7 @@ encoder:
 招親	2
 搶親	1
 摘選自
-拮親
+拮殄
 搭進去	1
 招進去
 招進來
@@ -128929,7 +129112,7 @@ encoder:
 招商證券
 搭訕者
 指名道姓
-拮親手
+拮殄手
 搭句說話
 招遠市
 拘牽
@@ -130186,7 +130369,7 @@ encoder:
 招搖過街
 捳高頭
 換屆選舉
-挾親
+挾殄
 托克遜縣
 撒克遜人
 表現主義	1
@@ -134569,7 +134752,7 @@ encoder:
 哪些人
 哪些
 民辦高校
-喐親
+喐殄
 哪邊
 鄙棄
 鄙吝
@@ -134582,7 +134765,7 @@ encoder:
 哪部
 鄙意
 哪站
-喐親就
+喐殄就
 哪裏買
 哪裏去
 哪裏人
@@ -134616,6 +134799,7 @@ encoder:
 啞鼓
 叼走
 喧笑
+口腔衞生	1
 口腔衛生
 口腔黏膜
 呈上升趨勢
@@ -135600,8 +135784,8 @@ encoder:
 跟蹤調查
 跳過來
 跌交
-跌親
-啄親
+跌殄
+啄殄
 跳進去	2
 跌進去	1
 吹進去
@@ -137087,7 +137271,7 @@ encoder:
 跑過去
 跑過來
 跑商
-跣親
+跣殄
 跑速
 吧主
 號衣
@@ -137532,6 +137716,7 @@ encoder:
 咔噠聲	7
 口語	1
 口語體
+吓嘩
 口說	1
 口諭
 啡啡聲
@@ -137626,7 +137811,7 @@ encoder:
 嚇退
 嚇過
 品頭論足
-嚇親
+嚇殄
 民本主義
 鳴放
 口頭文學
@@ -138073,6 +138258,7 @@ encoder:
 耶穌升天節
 職業生涯
 醫藥行業
+醫藥衞生	2
 醫藥衛生	1
 長榮航空
 馳往
@@ -138383,6 +138569,7 @@ encoder:
 馬術賽
 郡縣制度	1
 馬利基
+醫療衞生	2
 醫療衛生	1
 馬利亞
 聖馬利諾
@@ -139352,6 +139539,7 @@ encoder:
 耳朵	2
 耳刮子	1
 耳風	1
+聶衞平	1
 聶衛平
 駐車制動
 耳後
@@ -142088,9 +142276,9 @@ encoder:
 展覽會場
 免俗
 已付
-屈親條腰
-屈親隻腳
-屈親隻手
+屈殄條腰
+屈殄隻腳
+屈殄隻手
 屆人大
 已知
 免修
@@ -142183,7 +142371,7 @@ encoder:
 尾韻
 已過
 聽說讀寫
-屈親
+屈殄
 耽迷
 已就	1
 屈就
@@ -147123,6 +147311,7 @@ encoder:
 鄞州
 鄭州路
 鄞州區
+革命衞隊	1
 革命衛隊
 羚牛	1
 斯特
@@ -147731,12 +147920,14 @@ encoder:
 荊州區
 前后
 惹事生非
+觀測衞星	1
 觀測衛星
 前愆
 藝術風格
 前後
 前往
 前行	1
+前衞	1
 前衛
 前生
 蘇門答臘
@@ -149078,12 +149269,16 @@ encoder:
 警笛
 苦行僧	1
 苦行者
+警衞員	1
 警衛員
+警衞室	1
 警衛室
 落第
 善風
+警衞軍	1
 警衛軍
 蒙古利亞
+警衞隊	1
 警衛隊
 落後	2
 善後	1
@@ -149093,6 +149288,7 @@ encoder:
 苦得	2
 苦待	1
 苛待
+警衞	5
 警衛	4
 善行	3
 苦行	2
@@ -149356,6 +149552,7 @@ encoder:
 茹素
 落毒
 落拓
+落毒
 美容手術
 荷擔
 若夫
@@ -153941,7 +154138,7 @@ encoder:
 鑾輿
 繳費通知
 績效
-纊親
+纊殄
 嫌棄
 縱橫交錯
 變質處理
@@ -157104,12 +157301,15 @@ encoder:
 紐約郵報
 紅筆
 樂極生悲
+紅衞兵	1
 紅衛兵
 好腥行呀
 經筵
 紅得
+紅衞	4
 紅衛	3
 經術	2
+姓衞	2
 姓衛	1
 紅牛
 經籍
@@ -158913,6 +159113,7 @@ encoder:
 幼稚園
 鸞翔鳳集
 獎勵制度
+婦幼衞生	1
 婦幼衛生
 幻術
 幼師
@@ -161303,11 +161504,11 @@ encoder:
 羅盤針
 羅氏	1
 里氏
-因住冷親
+因住冷殄
 思維能力
 點鐵成金
 羅盛教
-因住凍親
+因住凍殄
 羅索
 墨囊
 羅賓遜
@@ -161376,7 +161577,7 @@ encoder:
 罣礙
 墨硯
 墨刑
-因住電親
+因住電殄
 墨鴉
 墨西拿
 墨西哥
@@ -161384,7 +161585,7 @@ encoder:
 里亞
 墨子
 里名
-因住鯁親
+因住鯁殄
 田坎
 墨魚	1
 里胥	9
@@ -161801,7 +162002,7 @@ encoder:
 因扎吉
 蜀犬吠日
 默唸
-畀蚊啄親
+畀蚊啄殄
 默嘆
 因故取消
 固執己見
@@ -162635,6 +162836,7 @@ encoder:
 恩斯特
 國民革命軍
 思茅
+國民警衞隊	1
 國民警衛隊
 思舊
 思想觀念
@@ -163491,6 +163693,7 @@ encoder:
 四分曆
 四分鐘
 四分法
+四分衞	1
 四分衛
 四分之
 黑色金屬
@@ -166290,6 +166493,7 @@ encoder:
 高風	1
 通風機	1
 逆向行駛
+講衞生	1
 講衛生
 通風處
 高風險
@@ -169069,10 +169273,15 @@ encoder:
 高技術產業
 剖腹生產
 享受生活
+護衞者	1
 護衛者
+護衞艇	1
 護衛艇
+護衞軍	1
 護衛軍
+護衞隊	1
 護衛隊
+護衞艦	2
 護衛艦	1
 護航艦
 逆水行舟
@@ -169081,6 +169290,7 @@ encoder:
 敲得	2
 設得	1
 護得
+護衞	1
 護衛
 護從
 設籍
@@ -170834,7 +171044,7 @@ encoder:
 逢場作戲
 誘餌
 誘供
-督穿個窿
+啄穿個窿
 透心	1
 彪悍
 市場情況
@@ -172552,6 +172762,7 @@ encoder:
 夜行軍	1
 放風聲
 談笑風生	2
+通訊衞星	1
 通訊衛星
 夜行性
 意大利人	2
@@ -173616,6 +173827,7 @@ encoder:
 迎風	3
 新風	2
 避風	1
+近衞軍	1
 近衛軍
 高速行駛
 避風處
@@ -175291,6 +175503,7 @@ encoder:
 處得來
 劇動
 計劃生育
+市衞生局	1
 市衛生局
 談判制度	1
 訂製
@@ -175618,6 +175831,7 @@ encoder:
 進行交易
 辦事效率
 剷剷
+近衞文麿	1
 近衛文麿
 進行交流
 遮風避雨
@@ -176489,7 +176703,7 @@ encoder:
 高麗大藏經	6
 龍心大悅
 記憶猶新
-意中	2
+意中	1
 文化背景
 認帳
 龍蝦肉
@@ -177395,6 +177609,7 @@ encoder:
 追風	2
 迴風	1
 語風
+通信衞星	2
 通信衛星	1
 適航性
 占鳳	1
@@ -178542,7 +178757,7 @@ encoder:
 誇張
 誇張法
 新片預告
-旁人	4
+旁人	5
 方人	3
 訪人	2
 六方會談
@@ -179456,7 +179671,7 @@ encoder:
 道真縣
 說真的	1
 說穿
-督穿
+啄穿
 說實話	1
 說真話
 說穿了
@@ -180147,7 +180362,6 @@ encoder:
 競選人
 親親	1
 說親
-督親
 就讀於
 記述文
 競速
@@ -181451,6 +181665,7 @@ encoder:
 說溜了嘴
 送醫急救
 這個名字
+過當防衞	6
 過當防衛	5
 逼急
 逼人	3
@@ -182037,3 +182252,17 @@ encoder:
 顫音
 虎頭虎腦
 邁赫迪軍	4
+撞殄
+熱殄
+了啵
+留喺
+留喺度
+酒尊
+酒罇
+口面
+熟口面
+好熟口面
+火著
+損痕
+成個人
+企住
