--- a/cangjie6.extended.dict.yaml
+++ b/cangjie6.extended.dict.yaml
@@ -18184,6 +18184,7 @@ encoder:
 核戰爭	1
 楚漢戰爭
 核戰
+來咗
 來呀
 木劍
 來啊
@@ -24252,7 +24253,7 @@ encoder:
 又能夠	1
 法包
 濁世
-叉手	1
+叉手
 法拍屋
 淺耕
 激濁揚清
@@ -37108,6 +37109,8 @@ encoder:
 喜歡吵架
 地緣戰略
 走味
+走咗
+走咗去
 走啦
 走唔切
 走夾唔唞
@@ -39776,6 +39779,7 @@ encoder:
 稀缺
 禹會
 躺個
+黐住
 歸位
 歸依
 稱心	2
@@ -43310,6 +43314,7 @@ encoder:
 得空
 舷窗
 自我實現
+得未
 得未呀
 特支	1
 特支費
@@ -43748,6 +43753,7 @@ encoder:
 我只
 我只有
 我只想
+得㗎喇	1
 得喇
 我哋嘅
 得啖笑
@@ -51591,6 +51597,7 @@ encoder:
 先嚴
 毛呢
 自嘆
+先啱
 拜把兄弟
 先民	1
 島民
@@ -78369,6 +78376,8 @@ encoder:
 而入	2
 再入	1
 雨人
+黐飲
+黐食
 反腐倡廉
 再創
 不通人情
@@ -82919,6 +82928,7 @@ encoder:
 壓路機	1
 型號	2
 雅號	1
+至啱
 壓路	1
 理路
 西羅馬帝國
@@ -89340,6 +89350,7 @@ encoder:
 靈境
 砍壞
 一人份
+黐飲黐食
 反璞歸眞	1
 反璞歸真
 砍向
@@ -132975,6 +132986,7 @@ encoder:
 吱吱嘎嘎
 吸吮
 吱吱
+嚟咗
 彔彔
 嚟呀
 噯呀
@@ -136999,6 +137011,7 @@ encoder:
 吼住佢
 跪低
 跪伏
+𡃁仔
 口齒伶俐
 咱倆
 號兵
@@ -165077,6 +165090,7 @@ encoder:
 與衆不同
 學以致用
 興之所至
+與人無尤
 毀家紓難
 止跌回升
 學來學去
