--- a/cangjie6.extended.dict.yaml
+++ b/cangjie6.extended.dict.yaml
@@ -2,7 +2,7 @@
 
 # 蒼頡檢字法詞典，來自Github/lotem/brise/essay
 # 加入粵拼詞匯，來自Github/lotem/brise/jyutping
-
+# 雪齋整理
 # License: GPL
 ---
 name: cangjie6.extended
@@ -4716,7 +4716,7 @@ encoder:
 朋克
 購車
 購有
-朋友
+朋友	1
 朋友們
 骨灰	1
 骨灰罈
@@ -9977,6 +9977,7 @@ encoder:
 見證
 亂說	1
 見說
+冚旗
 見於	1
 脫戲
 胸章
@@ -11627,12 +11628,14 @@ encoder:
 金堂縣
 釣魚執法
 金雀花
-鏢師
+鑣師
+鑣頭
+總鑣頭
 八小時
 鍼灸麻醉
 釣魚式攻擊
 金小蜂
-鏢客
+鑣客
 金幣
 公孫大娘
 錯綜複雜
@@ -11650,7 +11653,7 @@ encoder:
 八掌溪
 公然表示
 金無足赤
-鏢局
+鑣局
 鎢絲
 貧無立錐
 八場	1
@@ -15603,6 +15606,7 @@ encoder:
 枝丫
 板金工
 梭鏢
+劫鑣
 棱錐
 棱鏡
 板橋市
@@ -27815,7 +27819,7 @@ encoder:
 港務局
 沉陷在
 沉陷於
-沉入	2
+沉入	3
 港人	1
 港內	1
 淘氣鬼
@@ -28286,7 +28290,7 @@ encoder:
 水牀
 派不是	1
 漂流不定
-水經注	2
+水經注	3
 滾珠
 滾球	1
 流球
@@ -67434,7 +67438,7 @@ encoder:
 架次
 存廢
 大地之歌
-架式	1
+架式	2
 架空
 雄厚實力
 大枝
@@ -78434,7 +78438,7 @@ encoder:
 兩便
 再倒
 丙舍
-而今	1
+而今	3
 霸氣	1
 瑞氣
 而你	1
@@ -81761,8 +81765,8 @@ encoder:
 碳素	1
 原素
 不打
-不振	2
-碼表	1
+碼表	2
+不振	1
 不表
 不孝
 不打緊
@@ -81910,7 +81914,7 @@ encoder:
 不期
 原基	1
 不甚	1
-烈山	1
+烈山	2
 原函數
 不以	1
 原以
@@ -82444,8 +82448,8 @@ encoder:
 天理循環
 至系
 壓船
-一去	3
-班戈	2
+一去	2
+班戈	1
 一幫	3
 雅戈爾	2
 一塊肉	1
@@ -88396,7 +88400,8 @@ encoder:
 理性主義	1
 平均主義
 形式邏輯
-二進制
+二進制	1
+三進制
 二進宮
 二進位
 一下場
@@ -97414,6 +97419,9 @@ encoder:
 孭飛
 孫臏兵法
 孭仔
+孭我
+孭你
+孭佢
 孭袋
 孭債
 隕命
@@ -98653,6 +98661,7 @@ encoder:
 廷長
 墜馬	1
 墮馬
+孭住
 孭住藥煲
 墮落	1
 墜落
@@ -99878,7 +99887,7 @@ encoder:
 弔旗	1
 引道	1
 引導
-隆昌	1
+隆昌
 隆昌縣
 發生關係
 急性闌尾炎
@@ -104915,6 +104924,7 @@ encoder:
 內貿
 人有我有
 信用等級
+你同我
 你同我鬥
 內科學	1
 偏重
@@ -106028,7 +106038,7 @@ encoder:
 化學公司	1
 修築公路
 集鎮
-保鏢
+保鑣
 保釣
 集錄
 氣忿
@@ -106128,6 +106138,7 @@ encoder:
 餘熱
 氣勢
 條款	1
+條脷
 餘款
 命途坎坷
 他志
@@ -110268,7 +110279,7 @@ encoder:
 午餐會
 午餐費
 貨運卡車
-人本	1
+人本
 人本論	1
 人大	1
 敘明
@@ -111545,7 +111556,7 @@ encoder:
 低下頭
 僅需
 低雲	1
-人丁	1
+人丁	3
 無產階級
 缸子	1
 伍子胥
@@ -113481,7 +113492,7 @@ encoder:
 作惡多端
 億多隻
 你諗多咗
-悠久	1
+悠久	3
 愈發	1
 代發
 代名詞
@@ -116389,6 +116400,7 @@ encoder:
 含恨而死
 含恨而終	1
 飲恨而終
+食一啖
 食祿
 餘震不斷
 食神
@@ -116496,6 +116508,7 @@ encoder:
 依據
 食邑
 食嗮
+食啖
 依啲
 餵哺
 優良單株
@@ -124995,9 +125008,9 @@ encoder:
 換句話
 敖包
 換包
-換手	4
-撒手	3
-摸手	2
+換手	5
+撒手	4
+摸手	1
 撒手鐧	1
 拔都
 教授
@@ -125544,7 +125557,7 @@ encoder:
 擇偶
 都住
 拎住
-手背	1
+手背
 都快
 都怪
 都必須
@@ -129832,6 +129845,7 @@ encoder:
 捲次
 把式
 攪成噉
+攪成
 撓度
 扎囊
 抱窩	1
@@ -133445,9 +133459,10 @@ encoder:
 踢了	1
 口風琴
 踢人	1
-啲人
+啲人	1
 吵人
 路透集團
+啲餸
 口徑
 踢倒
 吻你
@@ -137519,7 +137534,7 @@ encoder:
 嘯傲
 嘯鳴
 嘯聚	1
-口齒	1
+口齒	2
 趾甲	1
 嚴肅處理
 蹈襲
@@ -142912,6 +142927,7 @@ encoder:
 著作權
 著作物
 著作人
+著數
 薯餅
 普世
 藉手
@@ -143488,6 +143504,7 @@ encoder:
 黃縣
 共軍	1
 黃腔
+兼且
 兼具
 黃冠
 共同
@@ -153565,6 +153582,8 @@ encoder:
 網蟲
 網費
 嬌貴
+終有一日	1
+總有一日
 納貢
 納爾遜
 綿亙
@@ -165896,6 +165915,7 @@ encoder:
 高爵
 膏腴
 講錯嘢
+講極
 高八度
 高分子
 通鋪
@@ -169051,6 +169071,7 @@ encoder:
 遐想
 旗鼓相當
 近水樓臺
+近磅
 返校	1
 護校
 雜技演員
