--- a/cangjie6.extsimp.dict.yaml
+++ b/cangjie6.extsimp.dict.yaml
@@ -1,6 +1,6 @@
 # encoding: utf-8
 
-# 苍颉检字法简体词典，来自搜狗互联网词库(http://www.sogou.com/labs/dl/w.html)
+# 蒼頡檢字法簡體詞典，來自搜狗互聯網詞庫(http://www.sogou.com/labs/dl/w.html)
 # 雪齋整理
 # License: GPL
 ---
@@ -33776,16 +33776,16 @@ encoder:
 第二类	2
 第三类	1
 第五大
-第二个	10
-第二节	9
-第二部	8
-第三节	7
-第三个	6
-第三部	5
-第二种	4
-第五节	3
-第三种	2
-第五部	1
+第二个	9
+第二节	8
+第二部	7
+第三节	6
+第三个	5
+第三部	4
+第二种	3
+第五节	2
+第三种	1
+第五部
 第五个
 第三	4
 第二册	3
@@ -37046,16 +37046,16 @@ encoder:
 第二十节	2
 第三十节	1
 第二十个
-第三十一	10
-第二十五	9
-第三十二	8
-第三十三	7
-第三十五	6
-第五十一	5
-第五十二	4
-第五十三	3
-第五十五	2
-第二十二	1
+第三十一	9
+第二十五	8
+第三十二	7
+第三十三	6
+第三十五	5
+第五十一	4
+第五十二	3
+第五十三	2
+第五十五	1
+第二十二
 第二十三
 垂直线
 签定	1
@@ -79516,16 +79516,16 @@ encoder:
 二十天	1
 五十个
 二审
-二十一	10
-二十五	9
-二十三	8
-三十二	7
-三十五	6
-三十一	5
-三十三	4
-五十五	3
-五十三	2
-五十二	1
+二十一	9
+二十五	8
+二十三	7
+三十二	6
+三十五	5
+三十一	4
+三十三	3
+五十五	2
+五十三	1
+五十二
 五十一
 两性空间
 三室	1
