--- a/cangjie6.extended.dict.yaml
+++ b/cangjie6.extended.dict.yaml
@@ -128475,6 +128475,7 @@ encoder:
 擱起來
 搶走
 搶墒
+搭的	3
 扣的	2
 搶的	1
 摘的
@@ -128560,6 +128561,7 @@ encoder:
 搭車去
 搭車到
 搭車來
+搭𨋢
 招事
 泰晤士報
 泰晤士河
@@ -128776,11 +128778,14 @@ encoder:
 拈指
 扣扣	1
 搭扣
+搭唔搭的
+搭唔搭車
 擔枱擔凳
 拾捌
 持槍搶劫	2
 擔擔麪	1
 攔路搶劫
+搭唔搭𨋢
 招招	1
 拮据
 招攬
@@ -128805,6 +128810,7 @@ encoder:
 拓跋氏
 扣啊
 擔唔喐
+搭唔搭
 括號
 搭嘴
 拓跋
