--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -82724,6 +82724,8 @@ encoder:
 𡘑	xk
 𣥯	xkb
 𦥯	xkkb
+𥕭	xkkr
+𥂞	xkkt
 𧤑	xknb
 𪌲	xkoe
 𦥹	xkq	1
@@ -83444,8 +83446,6 @@ encoder:
 歮	xxx
 𠟞	xxxln
 𢡬	xxxp
-𥕭	xxxr
-𥂞	xxxt
 與	xyc	1
 𫟋	xyc
 𪇬	xychz
