fix a minor bug
𧖤	daali -> dwali

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -8346,7 +8346,6 @@ encoder:
 𣏬	da
 椙	daa
 橸	daaa
-𧖤	daali
 𣔂	dab	1
 𣓍	dab
 𣜸	dabj
@@ -11433,6 +11432,7 @@ encoder:
 𣐬	dw
 𣐭	dw
 𣍘	dwa
+𧖤	dwali
 𣖜	dwb
 𫌫	dwbhu
 𨤈	dwbmw
