Fix miscoded ones

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -2676,8 +2676,8 @@ encoder:
 𩩿	bbyta
 𩪘	bbytg
 𩪣	bbytp
-𬋹	bbytp
 𩪟	bbytr
+𬋹	bbytr
 𩨬	bbyvi
 骸	bbyvo	1
 𫆤	bc	3
@@ -2753,6 +2753,7 @@ encoder:
 𧸍	bcfdq
 賧	bcff
 𧷼	bcfff
+𧸣	bcfhb
 𧵦	bcfmu
 𬥓	bcfq
 𧵘	bcgb
@@ -3013,6 +3014,7 @@ encoder:
 腳	bcrl
 𠜛	bcrln
 𧶔	bcrmg
+𧵐	bcrno
 𭉦	bcrp
 脫	bcru	2
 脱	bcru	1
@@ -3051,6 +3053,7 @@ encoder:
 𧹀	bctlx
 𧵊	bctm
 賆	bctt
+𧶥	bcttt
 𧶩	bcttt
 𮚛	bctvg
 贎	bctwb
@@ -5408,7 +5411,6 @@ encoder:
 𥌴	buffi
 𥌌	buffq
 眇	bufh
-𧸣	bufhb
 𬸙	bufhm
 𪾱	bufhu
 𪃦	bufhz
@@ -5869,7 +5871,6 @@ encoder:
 𥄝	bumu	1
 𥃺	bumu
 䁮	bumua
-𥉢	bumug
 𤭤	bumun	1
 𤭛	bumun
 𧠖	bumvh
@@ -5885,6 +5886,7 @@ encoder:
 䁏	bumwv
 眐	bumx
 𭿖	bumxf
+𥉢	bumxg
 𠖈	bumy
 𥈗	bumz
 𥍕	bumzb	1
@@ -6125,7 +6127,6 @@ encoder:
 𪾨	burms	1
 𪾥	burms
 𥆰	burmu
-𧵐	burno
 𥆽	buron
 𭿱	burpz
 𥅑	burr
@@ -6245,7 +6246,6 @@ encoder:
 𭾞	butt
 𭾠	butt
 𪾿	butta
-𧶥	buttt
 𥉮	butub	1
 𥈞	butub
 𥍐	butvd
@@ -6397,7 +6397,6 @@ encoder:
 眆	buyhs	1
 褜	buyhv	4
 𫌎	buyhv
-𭾱	buyhv
 𫌧	buyhz
 𥋏	buyia
 𥇱	buyid
@@ -7468,7 +7467,7 @@ encoder:
 鏣	citf
 𣌶	citw
 鉞	ciu
-𩒬	ciuhz
+𩒬	ciumz
 𭣭	ciuye
 𭁜	civdl
 鎯	civl	1
@@ -9392,6 +9391,7 @@ encoder:
 𧢔	dcbuu
 𬂾	dcd
 𣛞	dce
+𬉟	dce
 𣟡	dchb
 椕	dchd
 𪈐	dchz
@@ -9674,6 +9674,7 @@ encoder:
 𬅙	ddwll
 𫦜	ddwln
 𫿣	ddwok
+𣛅	ddxb
 㪔	ddye
 𧞉	ddyhv	1
 𧛀	ddyhv
@@ -10596,6 +10597,7 @@ encoder:
 𣚲	dixo
 樚	dixp	1
 𣓄	dixp
+𣖸	diyl
 𮪺	diyrb
 末	dj
 㯽	djac	1
@@ -11690,7 +11692,6 @@ encoder:
 韗	dqbjj
 𮧲	dqbla
 𩏅	dqbme
-𬰯	dqbni
 𩏺	dqbue
 𧢣	dqbuu
 韜	dqbx
@@ -11710,6 +11711,7 @@ encoder:
 𩎸	dqfsu
 𩏮	dqgbd
 𣖖	dqgi
+𬰯	dqgni
 𩏫	dqgow
 韥	dqgwc
 𩏳	dqhai
@@ -12163,7 +12165,8 @@ encoder:
 橏	dtgr
 㰕	dtgs	1
 𣡒	dtgs
-㯼	dtgt
+㯼	dtgt	1
+𣙥	dtgt
 欟	dtgu	2
 𣚰	dtgu	1
 𪲞	dtgu
@@ -13192,7 +13195,6 @@ encoder:
 𣒕	ecd
 𮭊	ecdhz
 𬪔	ecdnl
-𬉟	ece
 粱	ecfd	1
 𫯆	ecgah
 𥞹	echd
@@ -15161,6 +15163,7 @@ encoder:
 㳋	eom
 浜	eomc
 涂	eomd	1
+𪶅	eomf
 洤	eomg	2
 㳝	eomg
 浍	eomi
@@ -15300,7 +15303,6 @@ encoder:
 浺	epl
 汋	epm	3
 𨢯	epmcw
-𪶅	epmf
 汮	epmm	2
 𪶥	epmm	1
 湉	epmr
@@ -19414,7 +19416,6 @@ encoder:
 𭴭	fyws
 𭶦	fywv
 㸄	fyx
-燫	fyxc
 𤒱	fyxf
 炞	fyy
 𤑦	fyyr
@@ -19614,13 +19615,12 @@ encoder:
 𮝘	gbvj
 𡏛	gbvk
 𡌝	gbvs
-𣓑	gbwd
 𤱣	gbwl
 壷	gbwm	1
 𡔫	gbwm
-㚄	gbwo
+㚄	gbwo	1
+𫯃	gbwo
 𡕅	gbwv
-𫯃	gbwyo
 塪	gbx
 壺	gbxm
 坍	gby
@@ -19644,7 +19644,6 @@ encoder:
 夌	gche
 𡓯	gchg
 𪏙	gchne	1
-𣫌	gchne
 𠒀	gchu
 𧸷	gchvl
 𩴺	gchwi
@@ -19699,6 +19698,7 @@ encoder:
 㝅	gdhne	2
 𣫗	gdhne	1
 𣫃	gdhne
+𣫌	gdhne
 𣫓	gdhne
 𣮾	gdhqu
 𡓀	gdhx
@@ -20085,7 +20085,6 @@ encoder:
 𢿣	gguye
 奊	ggvk
 𣫴	ggwj
-𣛅	ggxb
 卦	ggy
 𪚝	ggybp
 㪈	ggye
@@ -20794,7 +20793,6 @@ encoder:
 𡊆	gmmf
 坛	gmmi
 𪣄	gmmj
-𭏀	gmmk
 𡉨	gmml
 𣤼	gmmno
 𡔓	gmmp
@@ -20820,7 +20818,6 @@ encoder:
 堛	gmrw	1
 㙧	gmrw
 𪤔	gmsb
-𭃚	gmsk
 𪤆	gmss
 𭍿	gmt
 𪤁	gmti
@@ -21319,11 +21316,13 @@ encoder:
 𧼏	gonyi
 䟋	gonyr
 𧺥	gonz
+𧽻	gonzb
 𫎷	gonzo
 龪	goo
 𧺌	goo
 𭎂	goo
 𧼱	gooae
+𧽜	gooar
 𧺬	goob
 𧷀	goobc
 𧼯	goobn
@@ -21797,7 +21796,6 @@ encoder:
 𡑥	gseu
 𡎮	gsfb
 墛	gsfi
-𡒙	gsg
 𫭺	gsgi
 𡓹	gsgl
 切	gsh
@@ -22226,6 +22224,7 @@ encoder:
 墑	gyjr		gy'jr
 坟	gyk	1
 垯	gyk
+𡎑	gykh
 𪤕	gykm
 𪣠	gykr
 垶	gyl
@@ -23885,7 +23884,6 @@ encoder:
 秘	hdph	1
 𥝢	hdph
 𥟚	hdphg
-𪏵	hdphh	1
 𥝤	hdphh
 𥡓	hdphh
 𥡔	hdphp
@@ -24381,6 +24379,7 @@ encoder:
 𪏺	heph	1
 𪏯	heph
 𪒺	hephf
+𪏵	hephh
 𤛿	hephq
 𪇺	hephz
 𬕋	hepi
@@ -25527,6 +25526,7 @@ encoder:
 𩳇	hiohe
 鴔	hiohz	1
 𪀅	hiohz
+𮅟	hioi
 𥴃	hioj
 𩳦	hiokr
 魀	hioll
@@ -25820,6 +25820,7 @@ encoder:
 𬯈	hjpou
 䈼	hjpu
 㪓	hjpye
+𮥜	hjqmc
 𥰶	hjqr
 舌	hjr	1
 䇢	hjr
@@ -26470,10 +26471,12 @@ encoder:
 𤯨	hmmgt
 𥬀	hmmi
 𨏜	hmmjj
+𭏀	hmmk
 𥫶	hmml
 𭤟	hmml
 𭺵	hmmlk
 㔐	hmmln
+𥴐	hmmm
 𥯙	hmms	3
 𥬤	hmms	2
 𥫡	hmms	1
@@ -26538,7 +26541,8 @@ encoder:
 𬇉	hmsh
 𭃚	hmshh
 𭃚	hmshi
-䈆	hmsk
+䈆	hmsk	1
+𭃚	hmsk
 笻	hmsl
 𬼓	hmsmv
 𫁾	hmso	1
@@ -26954,7 +26958,6 @@ encoder:
 𩗲	hnnsd
 䱘	hnnwf	2
 䱥	hnnwf	1
-𣩕	hnnwf
 𩸡	hnnwf
 𫚟	hnnwm
 𩘻	hnnzb
@@ -27718,6 +27721,7 @@ encoder:
 笭	honi	1
 𤓵	honi
 𢓶	honib
+𧻬	honin
 𢕠	honiw
 𢕭	honjk
 衡	honkn	1
@@ -27738,13 +27742,11 @@ encoder:
 𪫔	honwk
 𢕻	honyr
 𭛞	honz
-𨗝	honzb	1
-𧽻	honzb
+𨗝	honzb
 𢔟	honzd
 𥬈	hoo
 復	hooae
 𫋰	hooan
-𧽜	hooar
 𩞐	hooav
 𦟝	hoob	1
 𢓇	hoob
@@ -28536,6 +28538,7 @@ encoder:
 𤚙	hqnbk
 觕	hqnbq	2	hqnb'q
 𤛳	hqnbq
+𥮁	hqne
 犍	hqneq	1
 𤚄	hqngg
 𭷜	hqniy
@@ -28707,6 +28710,7 @@ encoder:
 犕	hqtmb
 𤛥	hqtmc
 𤙢	hqtmd
+𤙢	hqtmj
 𤛫	hqtmq
 𤛟	hqtpb
 䍧	hqtq
@@ -28822,7 +28826,6 @@ encoder:
 𨽡	hrcor
 𣚩	hrd	1
 𬜏	hrddf
-𤿘	hrdhe
 𤿩	hrdhe
 𨼱	hrdkr
 𦧺	hrdlc	1
@@ -28966,7 +28969,6 @@ encoder:
 𫧂	hrpm
 䑜	hrptd
 𡀤	hrqi
-𮥜	hrqmc
 筥	hrr	4
 𠂤	hrr
 𬂫	hrrd
@@ -30421,7 +30423,6 @@ encoder:
 𦦘	hxjlo
 𦦕	hxkoo
 𥰞	hxle
-𬾜	hxne
 𡖰	hxnin
 𦥵	hxnr
 𥯮	hxo
@@ -33281,7 +33282,6 @@ encoder:
 𭂛	imhrf
 𠗬	imhsb
 𠗏	imhsh
-凞	imhuf
 𪉅	imhym
 𠘜	imhzk
 𠫛	imi
@@ -33336,6 +33336,7 @@ encoder:
 𠗎	imlog
 冿	imlq
 𮍐	imlss
+凞	imluf
 𠗩	imlwl
 冮	imm
 𪱞	immb
@@ -33379,7 +33380,7 @@ encoder:
 𠗫	imnbk
 𠗠	imndt
 𠗄	imnin
-𠗴	imniu
+𠗴	imniw
 𠘓	imnlm
 𫥊	imnmu
 𠖭	imnn
@@ -33518,7 +33519,6 @@ encoder:
 𢇨	imvi
 𠘙	imvid
 𪞛	imw
-㑹	imwa
 𪞦	imwb
 𢋏	imwd
 𢊣	imwf
@@ -34504,7 +34504,8 @@ encoder:
 谏	iudwf		iudw'f
 𠮈	iue
 译	iueq
-焈	iuf
+焈	iuf	1
+凞	iuf
 诮	iufb
 谠	iufbu
 𫍴	iufdv
@@ -35147,6 +35148,7 @@ encoder:
 索	jbvif	1
 𦃦	jbvif
 𮈖	jbvif
+𣓑	jbwd
 𤴡	jbwio
 𬻫	jbwm
 𤱿	jbwml
@@ -35225,6 +35227,7 @@ encoder:
 窪	jcegg
 𥨿	jcehk
 𪂸	jcehz
+𪄑	jcehz
 𮄇	jcejd
 𠝠	jceln
 窏	jcemd
@@ -36163,7 +36166,6 @@ encoder:
 𡭇	jiob
 胾	jiobo
 截	jiog	1
-𮅟	jioi
 𪧝	jipf
 㢤	jips
 𢧭	jipua
@@ -36224,6 +36226,7 @@ encoder:
 寘	jjbc
 𨋻	jjbe
 𡩡	jjbf
+𡪍	jjbf
 輖	jjbgr		jjb'gr
 𨊶	jjbhn
 𪆘	jjbhz
@@ -36792,7 +36795,6 @@ encoder:
 軕	jju
 𨍈	jjuce
 𡩼	jjud
-𡪍	jjuf
 輲	jjumb
 𨌂	jjumg
 𨏳	jjuob
@@ -37661,6 +37663,7 @@ encoder:
 𨝢	jsenl
 𠦙	jsf
 𭵉	jsf
+𡒙	jsg
 𪤟	jsg
 𭃄	jsh
 𠦢	jshh
@@ -39734,7 +39737,6 @@ encoder:
 㾁	kijc
 𤶩	kije
 𤴻	kik
-𪠏	kike	1
 𤵬	kike
 痝	kikh	1
 瘆	kikh
@@ -40010,7 +40012,6 @@ encoder:
 𤹢	klpb
 𡙳	klpq
 𪮃	klq
-蹔	klryo	2
 𫏐	klryo	1
 痫	klsd
 𡙈	klsle
@@ -44146,7 +44147,6 @@ encoder:
 𩰙	lnors
 𫥻	lnosl
 䙞	lnot
-𬮭	lnqou
 𨚭	lnrau
 襁	lnri
 𧛘	lnrm
@@ -44623,6 +44623,7 @@ encoder:
 𬮬	lsqmb
 𤗮	lsqmc
 𫔲	lsqnd
+𬮭	lsqou
 闱	lsqs
 问	lsr	3
 𧙅	lsr
@@ -45465,7 +45466,6 @@ encoder:
 𠀑	mbv
 𡠈	mbv
 𫰗	mbv
-𩀄	mbvog
 𡎄	mbwlg
 𣦞	mbxye
 𩱐	mbycr
@@ -46567,8 +46567,9 @@ encoder:
 𤩘	mgdw
 瑓	mgdwf		mgdw'f
 𪻍	mge	2
-𪠦	mge	1
-𤦗	mge
+𤦗	mge	1
+𪠦	mge
+𠭱	mge
 𫨾	mge
 𫩆	mge
 𬍖	mge
@@ -47944,6 +47945,7 @@ encoder:
 𠦊	mij
 㕊	mijb
 厌	mik	2
+𪠏	mike
 黡	mikf
 厖	mikh
 魇	miki	1
@@ -48494,7 +48496,6 @@ encoder:
 𥕙	mmmr	2
 𥔴	mmmr	1
 𥐘	mmmr
-㒫	mmmu
 𤭓	mmmun
 辰	mmmv	1
 𬪿	mmmwg
@@ -48518,7 +48519,6 @@ encoder:
 𠘤	mmpoe
 𠄽	mmqy
 𥐖	mmr
-况	mmrhu
 𨳇	mmrln
 巧	mms	3
 亏	mms	2
@@ -48555,7 +48555,6 @@ encoder:
 𠩅	mmun
 𬎥	mmun
 邧	mmunl	1
-𨛞	mmunl
 𭭅	mmuno
 𫹵	mmup
 鼋	mmuu	1
@@ -48775,6 +48774,7 @@ encoder:
 𣩀	mnisb
 𣨲	mnite
 𣧡	mniu
+𭮀	mniu
 𣩏	mnixp
 𣧏	mniye
 瓧	mnj	4
@@ -49026,7 +49026,6 @@ encoder:
 殫	mnrrj
 𪾌	mnrt
 𪼶	mnru
-𭮀	mnru
 𭮁	mnru
 㱪	mnrua
 𣧟	mnrup
@@ -50309,6 +50308,7 @@ encoder:
 砛	mron	1
 砱	mroni	2
 𠾥	mroni
+𮍶	mroni
 䂼	mronp
 𥓂	mronr
 𥕼	mronw
@@ -50326,6 +50326,7 @@ encoder:
 砟	mros
 砱	mrosl	1
 𠾥	mrosl
+𮍶	mrosl
 𥕻	mrotf
 𪢦	mrotq
 𥐤	mrovs
@@ -52078,6 +52079,7 @@ encoder:
 𨡧	mwvmk
 𩉆	mwvmw
 𬱅	mwvmz
+𩀄	mwvog
 𨢪	mwvvd
 𭻌	mww
 𨢄	mwwhi
@@ -53234,6 +53236,7 @@ encoder:
 𧣔	nbmr	1
 𢏕	nbmr
 𧤜	nbmrb
+𧢵	nbms
 𧤲	nbmsf
 𧤶	nbmsp
 𧣂	nbmsu
@@ -53480,7 +53483,6 @@ encoder:
 𡥊	ndhqu
 𭒷	ndhu
 孫	ndhvf
-𪃁	ndhz
 𮬪	ndhz
 𪦷	ndi
 𭒸	ndi
@@ -57742,6 +57744,7 @@ encoder:
 𫛬	odhym
 鵂	odhz	1
 𪀪	odhz
+𪃁	odhz
 付	odi	1
 𢧅	odi
 𨾪	odig
@@ -59290,7 +59293,8 @@ encoder:
 𥏐	okhdn
 矮	okhdv
 𥎮	okhe
-俇	okhg
+俇	okhg	1
+𠍧	okhg
 𥏌	okhgu
 㣊	okhhh
 𪿎	okhhi
@@ -59301,7 +59305,6 @@ encoder:
 矫	okhkl
 𬑷	okhkq
 𥏵	okhlw
-𠍧	okhm
 𠇳	okhn
 𤛎	okhq
 𥐊	okhsk
@@ -59747,11 +59750,11 @@ encoder:
 侢	omgb	2
 𠓹	omgb
 𫤍	omgb
-釒	omgc	1
-𠋾	omgc
+釒	omgc
 𠍙	omgd
 𠓰	omge
-𪝰	omgf
+𪝰	omgf	1
+𠋾	omgf
 𪼈	omgg	4
 𨿂	omgg	3
 𠓾	omgg	2
@@ -59809,6 +59812,7 @@ encoder:
 侀	omkn
 𠐣	omkp	1
 𠍴	omkp
+𢞋	omkp
 𪟘	omks	1
 𠆬	omks
 𠆮	omks
@@ -59931,6 +59935,7 @@ encoder:
 傉	omvi
 俓	omvm
 𠏇	omvw
+㑹	omwa
 價	omwc
 傈	omwd	3
 僳	omwd	2
@@ -62583,6 +62588,7 @@ encoder:
 𠉡	oxlh
 𪩢	oxlll
 𬎩	oxmun
+𬾜	oxne
 𠉡	oxnh
 𠋟	oxo
 𩛒	oxoav
@@ -63119,6 +63125,7 @@ encoder:
 𥛤	pfshc
 惓	pfsu
 悩	pfuk		pfu'k
+惮	pfwj
 𪫞	pg
 𫧀	pg
 𢤋	pgbc
@@ -63802,8 +63809,7 @@ encoder:
 𩒠	pmkmz
 𣢸	pmkno
 𠣥	pmko
-悿	pmkp	2
-𢞋	pmkp	1
+悿	pmkp	1
 𢡊	pmkp
 𢚺	pmkr
 𪫡	pmks
@@ -64220,6 +64226,7 @@ encoder:
 愪	prbc	1
 𮠐	prbnl
 怾	prc
+𤿘	prdhe
 𭴔	prf
 悜	prhg
 𤫱	prhio
@@ -65020,7 +65027,6 @@ encoder:
 𢷍	qbmp
 挏	qbmr	1	qb'mr
 𢭟	qbms
-𧢵	qbms
 揺	qbmu
 𩇗	qbmvu
 靘	qbnau	1
@@ -65312,7 +65318,6 @@ encoder:
 𦔧	qdwbp
 𦔎	qdwce
 揀	qdwf		qdw'f
-𮒞	qdwf
 𦓵	qdwg
 𦓾	qdwhd
 耦	qdwib
@@ -65342,7 +65347,6 @@ encoder:
 𢴏	qebg
 𪎉	qebhu
 鋬	qec
-𫽂	qecsh
 𢯠	qede
 𬹅	qedh
 𤿲	qedhe
@@ -66165,6 +66169,7 @@ encoder:
 𩓕	qjdmz
 𨛙	qjdnl
 技	qje	3
+𫽂	qjeh
 擯	qjfc
 𢯱	qjfe
 𡉘	qjg
@@ -69509,8 +69514,6 @@ encoder:
 吰	rki
 𠴷	rkil
 㗐	rkit
-𪠻	rkiu
-𪠻	rkiv
 喯	rkjt
 唏	rkkb	1
 𠴳	rkkb
@@ -70098,6 +70101,7 @@ encoder:
 呐	rob	3
 呙	rob	2
 𭊏	robb
+𠼮	robf	1
 𤋚	robf
 𠻓	robg
 剐	robln
@@ -72706,7 +72710,9 @@ n	rter
 𠻜	ryij
 𡂭	ryio
 𭊹	ryio
+𪠻	ryiu
 𪡁	ryiu
+𪠻	ryiv
 呌	ryj
 嗹	ryjj
 嘀	ryjr		ry'jr
@@ -74828,7 +74834,6 @@ n	rter
 𣂊	siyj	1
 𣁸	siyj
 𨲨	siykm
-𣖸	siyl
 䦊	siymf
 𧩾	siymr
 𨱬	siyr
@@ -75628,6 +75633,7 @@ n	rter
 䜿	smmrt
 𩧿	smmrw
 𢑚	smms
+㒫	smmu
 屒	smmv	1
 㞡	smmv
 骠	smmwf
@@ -75715,6 +75721,7 @@ n	rter
 𢑘	smue
 𭕥	smue
 𬴁	smumj
+𨛞	smunl
 𡳘	smuo
 𫘱	smuob
 𩧱	smusu
@@ -76374,7 +76381,6 @@ n	rter
 𡮻	stfh
 𪣿	stg
 𣜆	stgr
-𣙥	stgt
 𫵨	sthbn
 㲯	sthqu	1
 𣱄	sthqu
@@ -77529,7 +77535,8 @@ n	rter
 𫊍	tduon
 菄	tdw	1
 𧅝	tdwa
-萰	tdwf		tdw'f
+萰	tdwf	1	tdw'f
+𮒞	tdwf
 𫈺	tdyo
 𧅜	tdyu
 𧅬	tdyzi
@@ -78996,14 +79003,16 @@ n	rter
 萱	tjmm	1
 𩉞	tjmms
 𩉯	tjmmu
-苧	tjmn	1
-靪	tjmn
+苧	tjmn	2
+靪	tjmn	1
+𬞊	tjmn
 𩊡	tjmnn
 𩊢	tjmnp
 𩊆	tjmnr
 萣	tjmo
 𮐃	tjmo
-鞆	tjmob
+鞆	tjmob	1
+𬰥	tjmob
 菪	tjmr
 䩹	tjmrb
 𩉱	tjmrm
@@ -79059,7 +79068,6 @@ n	rter
 靷	tjnl
 𩊛	tjnmu
 𦴌	tjnn
-𬞊	tjnn
 𩍐	tjnot
 𮏑	tjnp
 䪌	tjnri	2
@@ -79986,7 +79994,6 @@ n	rter
 𤮽	tmmj
 甛	tmmjr
 𦳲	tmmln
-𥴐	tmmm
 𦱯	tmmm
 𫮭	tmmnr
 茨	tmmo
@@ -81066,7 +81073,6 @@ n	rter
 𦏂	tqnbr
 䓔	tqnd
 𦺤	tqnd
-𥮁	tqne
 鮺	tqnf	1
 𦍴	tqnf
 羞	tqng
@@ -82939,6 +82945,7 @@ n	rter
 𭆫	ueke
 𡷍	uem
 𠔛	uemc
+𭖧	uemg
 𡻶	uemk
 𮫖	uemmv
 𨩹	uemnc
@@ -84062,7 +84069,6 @@ n	rter
 嶯	urji
 𡸾	urlu
 㟤	urme
-𭖧	urmg
 𡷤	urmk
 𭖫	urmr
 𬚩	urmrj
@@ -84473,6 +84479,7 @@ n	rter
 𡽫	uvdk
 𡴝	uvej
 𡾽	uvfa
+𫶦	uvfe
 𡽰	uvfg
 𡿞	uvfn
 𡾳	uvfp
@@ -84495,7 +84502,6 @@ n	rter
 𫲪	uvnd
 𭖝	uvnd
 𮠀	uvnl
-𫶦	uvok
 𫶹	uvru
 𡵗	uvsk
 𢇕	uvuv
@@ -85250,6 +85256,7 @@ n	rter
 𥿈	vfhke
 𦂜	vfhkl
 𦆓	vfhkn	1
+䋬	vfhkp
 𦃱	vfhkq
 𦅺	vfhkt
 𦆓	vfhku	2
@@ -85676,9 +85683,9 @@ n	rter
 𥾕	vfmu
 㽋	vfmun
 縟	vfmvi	1
-𥾬	vfmvi
 經	vfmvm
 𥾙	vfmvo
+𥾬	vfmvv
 䌚	vfmwd	1
 𦃊	vfmwd
 𦇉	vfmwe
@@ -86853,7 +86860,6 @@ n	rter
 𡣑	vjmc
 婃	vjmf	1
 𡤁	vjmf
-𡞤	vjmi	1
 𡝬	vjmi
 媗	vjmm
 𪥰	vjmn
@@ -86887,6 +86893,7 @@ n	rter
 姲	vjv	1
 嫥	vjwi	1
 𡞍	vjwi
+𡞤	vjwi
 𡝀	vjwj
 𫱮	vjwp
 夨	vk	1
@@ -89028,7 +89035,6 @@ n	rter
 𪽘	wgcg
 畤	wgdi	1
 𡭀	wgdi
-𠭱	wge
 𨤵	wgeff
 黒	wgf
 𭴬	wgf
@@ -89621,6 +89627,7 @@ n	rter
 罜	wlyg
 𬙙	wlyhs
 𢍧	wlyht
+𭾱	wlyhv
 𫅅	wlykl
 詈	wlymr
 𦋾	wlypm
@@ -91430,8 +91437,8 @@ n	rter
 韺	yatlk
 𮧾	yatmc
 𩑄	yatmd
+𫖛	yatmj
 𩐺	yatmm
-𫖛	yatmq
 頀	yatoe
 𬺾	yau
 𬽔	yauk
@@ -92418,9 +92425,12 @@ n	rter
 育	yib	1
 𬂄	yib
 𬗐	yibf
+𪟆	yibln
 𭁩	yibm
 𬫼	yibn
 𣣎	yibno
+𨛼	yibnl
+𨿾	yibog
 𪺮	yibq
 𥂥	yibt
 𬑁	yibt
@@ -92635,7 +92645,6 @@ n	rter
 𣁯	yjmmu
 𫐲	yjmo
 𮞼	yjmo
-𬰥	yjmob
 𫆶	yjmsb
 𤮩	yjmun	1
 𤭢	yjmun
@@ -93402,7 +93411,8 @@ n	rter
 𧇓	yncru
 䢊	ynd	1
 𣜄	ynd
-𧈇	ynddh
+𧇨	yndd
+𧈇	yuddh
 遜	yndf	1
 逊	yndf
 𧆯	yndh
@@ -93515,6 +93525,7 @@ n	rter
 𬩍	ynnd
 𠧽	ynnif
 𬽃	ynnu
+𣩕	ynnwf
 𩼊	ynnwf
 𬆙	ynnwm
 䖋	yno
@@ -95446,7 +95457,6 @@ n	rter
 髙	ysbr
 𬴗	ysbs
 覫	ysbuu	1
-𣄚	yscmo
 𣃺	yscor
 㿶	ysdhe	1
 𣃣	ysdhe
@@ -95757,6 +95767,7 @@ n	rter
 𣄣	ysxyc
 𭅴	ysy
 𭥁	ysybs
+𣄚	ysyco
 𣃚	ysyhn
 旘	ysyia
 旈	ysyiu
@@ -96163,7 +96174,6 @@ n	rter
 𨙗	ytww
 𣥢	ytx
 𮞟	ytx
-廉	ytxc	2
 𠔳	ytxc	1
 𥪖	ytxu
 𥩖	yty
