Update to Unicode 13.0
Add 13 from URO, 10 from ExtA, 7 from ExtB and 4939 from ExtG

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -12,8 +12,9 @@
 # 採用相對字頻 雪齋 2013-12-09
 # 增加擴展E區字 雪齋 2014-11-03
 # 增加擴展F區字 Fszhouzz 2017-12-09
+# 增加擴展G區字 雪齋 2020-03-18
 
-# 本字表收中日韓越統一表意文字及其擴展A、B、C、D、E、F區另加相容表意文字區之12箇獨立字、相容表意文字擴充區28箇獨立字。
+# 本字表收中日韓越統一表意文字及其擴展A、B、C、D、E、F、G區另加相容表意文字區之12箇獨立字、相容表意文字擴充區28箇獨立字。
 # 取碼依宋體及明體。另：擴展B區有三個重複收錄字，本表錄之，但加「#」註。
 
 # License: GPL
