--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -36837,7 +36837,8 @@ encoder:
 賔	jahc
 𭶞	jahc
 𡩏	jahu
-𠦝	jaj
+𠦝	jaj	1
+龺	jaj
 𪂂	jajhz
 𨿨	jajog
 𡩷	jajv
@@ -38121,7 +38122,6 @@ encoder:
 卄	jj	3
 𠥼	jj	2
 𠀆	jj	1
-龺	jj
 𰀁	jj
 𨍆	jjaa
 輼	jjabt	1
